<resources>
    <string name="add_activity_title">Add Expense</string>
    <string name="add_category">Add Category</string>
    <string name="add_image">Add Image</string>
    <string name="app_name">Expense Tracker</string>
    <string name="action_categories">Categories</string>
    <string name="action_delete_categories">Delete All Categories</string>
    <string name="action_delete_expenses">Delete All Expenses</string>
    <string name="action_get_expense_total">Get Expense Total</string>
    <string name="action_sort">Sort</string>
    <string name="average">Average: </string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_filter">Cancel Filter</string>
    <string name="category_activity_title">Categories</string>
    <string name="change_picture">Change picture</string>
    <string name="date">Date</string>
    <string name="date_ascending">Date - Ascending</string>
    <string name="date_descending">Date - Descending</string>
    <string name="edit_activity_title">Edit Expense</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_category">Enter Category</string>
    <string name="expenses">Expenses: </string>
    <string name="expense_image">Expense Image</string>
    <string name="export_expenses">Export Expenses</string>
    <string name="filter">Filter</string>
    <string name="filter_date_title">Select Date Range</string>
    <string name="filter_dialog_title">Filter By</string>
    <string name="filter_price_title">Select Price Range</string>
    <string name="from">From</string>
    <string name="import_dialog_title">Imported Expenses</string>
    <string name="import_expenses">Import Expenses</string>
    <string name="main_activity_title">My Expenses</string>
    <string name="maximum">Maximum: </string>
    <string name="minimum">Minimum: </string>
    <string name="name_ascending">Category - Ascending</string>
    <string name="name_descending">Category - Descending</string>
    <string name="price">Price</string>
    <string name="price_ascending">Price - Ascending</string>
    <string name="price_descending">Price - Descending</string>
    <string name="remove_picture">Remove picture</string>
    <string name="search">Search</string>
    <string name="select_date">Select Date</string>
    <string name="select_picture_from_gallery">Select picture from gallery</string>
    <string name="sort_dialog_title">Sort By</string>
    <string name="submit">Submit</string>
    <string name="take_new_picture">Take new picture</string>
    <string name="to">To</string>
    <string name="total">Total: </string>
</resources>
