<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stevenjcorreia.expensetracker.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_categories"
        android:orderInCategory="1"
        android:title="@string/action_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="2"
        android:title="@string/import_expenses"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="3"
        android:title="@string/export_expenses"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="4"
        android:title="@string/action_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_expenses"
        android:orderInCategory="5"
        android:title="@string/action_delete_expenses"
        app:showAsAction="never" />
</menu>
