<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stevenjcorreia.expensetracker.CategoryActivity">

    <!-- TODO - Move back button to left side of toolbar? -->
    <item
        android:id="@+id/action_back_to_expenses"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/back"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="1"
        android:title="@string/action_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_categories"
        android:orderInCategory="2"
        android:title="@string/action_delete_categories"
        app:showAsAction="never" />
</menu>
