<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/categories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/addCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:contentDescription="@string/add_category" />
    </LinearLayout>

    <Button
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date" />

    <EditText
        android:id="@+id/amountValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_photo_camera_black_24dp"
        android:contentDescription="@string/add_image" />

    <Button
        android:id="@+id/submitExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginVertical="5dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>