<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/cancelPriceRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:id="@+id/filterPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingVertical="5dp"
        android:text="@string/filter_price_title" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/dateRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submitPriceRange"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>