<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/filterDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingVertical="5dp"
        android:text="@string/filter_dialog_title" />

    <TextView
        android:id="@+id/filterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:paddingVertical="5dp"
        android:text="@string/date"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/filterPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:paddingVertical="5dp"
        android:text="@string/price"
        android:layout_gravity="center" />
</LinearLayout>