<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/changePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_picture"
        android:layout_gravity="center"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:paddingTop="15dp" />

    <TextView
        android:id="@+id/removePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:paddingBottom="15dp"
        android:text="@string/remove_picture" />

    <TextView
        android:id="@+id/cancelImageEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:paddingBottom="15dp"
        android:text="@string/cancel" />

</LinearLayout>